--- a/Nueva carpeta/css/style.css
+++ b/Nueva carpeta/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
 }
 
-html, body {
+html, body, #map {
   height: 100%;
   width:100%;
   font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
